--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css"> 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
 </head>
 <body>
 <main>
-  <img src="/assets/images/avatar-jessica.jpeg" alt="Avatar of Jessica Randall">
+  <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar of Jessica Randall">
   <h1>Jessica Randall</h1>
   <div class="location">London, United Kingdom</div>
   <div class="notes">"Front-end developer and avid reader."</div>
