--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
 </head>
 <body>
 <main>
-  <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar of Jessica Randall">
-  <h1>Jessica Randall</h1>
-  <div class="location">London, United Kingdom</div>
-  <div class="notes">"Front-end developer and avid reader."</div>
   <container>
-      <button>GitHub</button>
-      <button>Frontend Mentor</button>
-      <button>LinkedIn</button>
-      <button>Twitter</button>
-      <button>Instagram</button>
-  </container>  
-  </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mary Eckmeier</a>.
-  </div>
- 
+    <img src="./assets/images/avatar-jessica.jpeg" alt="Avatar of Jessica Randall">
+    <h1>Jessica Randall</h1>
+    <div class="location">London, United Kingdom</div>
+    <div class="notes">"Front-end developer and avid reader."</div>
+    <container>
+        <button>GitHub</button>
+        <button>Frontend Mentor</button>
+        <button>LinkedIn</button>
+        <button>Twitter</button>
+        <button>Instagram</button>
+    </container>  
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Mary Eckmeier</a>.
+    </div>
+  </container>
+   </main>
 </body>
 </html>
